--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload CSV</title>
+    <title>Team Splitter</title>
 </head>
 <body>
-    <h1>Upload your CSV file</h1>
+    <h1>Team Splitter</h1>
     <p>Please ensure your CSV file is formatted with the following columns:</p>
     <ul>
         <li><strong>player:</strong> The name or ID of the player.</li>
-        <li><strong>score:</strong> The score or ranking of the player.</li>
+        <li><strong>score:</strong> The score or ranking of the player, recommened: 1-4.</li>
         <li><strong>goalkeeper:</strong> Indicate if the player is a goalkeeper with '1' or leave empty if not.</li>
     </ul>
     <p>The file should include headers for each column. Here's an example:</p>
     <pre>
         player,score,Goalkeeper
-        John Doe,15,1
-        Jane Smith,12,
-        Bob Johnson,10,
+        John Doe,2,1
+        Jane Smith,1,
+        Bob Johnson,4,
     </pre>
     <form method="post" enctype="multipart/form-data">
         <input type="file" name="file" required>
